--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 APScheduler==3.6.3
 colorama==0.4.3
+func-timeout==4.3.5
 logzero==1.5.0
 mypy==0.782
 mypy-extensions==0.4.3
@@ -10,5 +11,3 @@ six==1.15.0
 typed-ast==1.4.1
 typing-extensions==3.7.4.2
 tzlocal==2.1
-logzero==1.5.0
-
